<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bi"
    tools:context=".CreateCard">

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="148dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/surname"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/Resultbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="34dp"
        android:text="@string/cart_creation"
        android:textColor="?attr/colorError"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Resultbutton"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bi"
        android:text="@string/add"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/position"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/comp_name"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/name"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/position"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/position"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="74dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/phone"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>