<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bi"
    tools:context=".Registration">

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="34dp"
        android:text="@string/cart_creation"
        android:textColor="?attr/colorError"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Resultbutton"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bi"
        android:text="@string/add"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/position"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/position"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/comp_name"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/company_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/surname" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="9dp"
        android:text="@string/position"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/position"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="64dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Resultbutton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="74dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="26dp"
        android:text="@string/phone"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="18dp"
        android:text="@string/email"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>